Added service to change liked flag using DI.  Also added span in button component to display flag state.

--- a/src/app/my-button/my-button.component.html
+++ b/src/app/my-button/my-button.component.html
@@ -1,2 +1,5 @@
 <!-- <p>my-button works!</p> -->
-<button (click)="clickTest()">Click Me!</button>
+<div id="imageDiv">
+    <button (click)="clickTest()">Click Me!</button>
+    <span style="margin-left: 10px">Image is Liked == {{ isLiked }}</span>  <!-- Style should go in css file -->
+</div>
