Added service prototype to create a message object.  Root component calls this to generate messages to render with ngFor.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <h3>
   <app-my-image></app-my-image>
   <app-my-button></app-my-button>
+  <div>
+    <ul id="messageList">
+      <li *ngFor="let m of messages.messages">{{ m.user.name }} : {{ m.text }} @ {{ m.timestamp }}</li>
+    </ul>
+  </div>
 </h3>
