--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <app-my-button></app-my-button>
   <div>
     <ul id="messageList">
-      <li *ngFor="let m of messages.messages">{{ m.user.name }} : {{ m.text }} @ {{ m.timestamp }}</li>
+      <li *ngFor="let m of messages.getMessages()">{{ m.getUser().getName() }} : {{ m.getText() }} @ {{ m.getTimestamp() }}</li>
     </ul>
   </div>
 </h3>
