--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<h3>
+<div id ="topDiv" class="flexCenterParent">
   <app-my-image></app-my-image>
   <app-my-button></app-my-button>
-  <div>
-    <ul id="messageList">
-      <h3>Messages</h3>
-      <li *ngFor="let m of messages.getMessages()">{{ m.getUser().getName() }} : {{ m.getText() }} (@ {{ m.getTimestamp() }})</li>
-    </ul>
-  </div>
-</h3>
+</div>
+<div id="bottomDiv">
+  <ul id="messageList">
+    <h3>Messages</h3>
+    <li *ngFor="let m of messages.getMessages()">{{ m.getUser().getName() }} : {{ m.getText() }} (@ {{ m.getTimestamp() }})</li>
+  </ul>
+</div>
