--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 <div id="bottomDiv">
   <ul id="messageList">
     <h3>Messages</h3>
-    <li *ngFor="let m of messages.getMessages()">{{ m.getUser().getName() }} : {{ m.getText() }} (@ {{ m.getTimestamp() }})</li>
+    <li *ngFor="let m of messages.getMessages()">{{ m.getTimestamp() }} ---> {{ m.getUser().getName() }}: {{ m.getText() }}</li>
   </ul>
 </div>
